--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
   http: ^0.12.2
+  localstorage: ^3.0.0
+  rxdart: ^0.24.1
 
 dev_dependencies:
   flutter_test:
